objects/Social_Media_Lead__c.object
<CustomObject>
    <label>Social Media Lead</label>
    <pluralLabel>Social Media Leads</pluralLabel>
    <nameField>
        <label>Social Media Lead Name</label>
        <type>Text</type>
        <length>80</length>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Platform__c</fullName>
        <label>Platform</label>
        <type>Picklist</type>
        <picklist>
            <picklistValues>
                <fullName>Facebook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LinkedIn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Twitter</fullName>
            </picklistValues>
        </picklist>
    </fields>
    <fields>
        <fullName>Campaign_Name__c</fullName>
        <label>Campaign Name</label>
        <type>Text</type>
        <length>255</length>
    </fields>
    <fields>
        <fullName>Lead_Details__c</fullName>
        <label>Lead Details</label>
        <type>TextArea</type>
    </fields>
</CustomObject>